# BUAS-Tmpl8Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: hello_window.cpp
include/math/: matrix3x3.h  vec3.h  vectors.h
src/math/: matrix3x3.cpp  vec3.cpp  vectors.cpp
